--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/c455d94eee43dc4ceeb83c0c0fd0d4c8?family=Segoe+Print+V1);
+
 body {
     font-family:"Gill Sans MT";
     /*background-color: rgb(37, 37, 37);*/
@@ -38,7 +40,7 @@ YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
     font-size: 16px;
     background-color: rgba(26, 26, 52, 0.4);
     color: whitesmoke;
-    font-family: segoe print;
+    font-family: Segoe Print;
     justify-content: center;
 }
 /*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
