--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 body {
     font-family:"Gill Sans MT";
     /*background-color: rgb(37, 37, 37);*/
-    background: url("f2.jpg");
+    background: url("HG.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-weight: bolder;
