--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
     font-size: 17px;
     color: black;
     justify-content: center;
-    background-color: green;
+    background-color: tomato;
 
 }
 /*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
