--- a/index.css
+++ b/index.css
@@ -1,54 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Kalam:wght@300&display=swap');
-
 body {
-    font-family:"Gill Sans MT";
-    /*background-color: rgb(37, 37, 37);*/
-    background: url("HG.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-weight: bolder;
+    background-color: rgba(67, 9, 240, 0.6);
+	font-family: Arial, "Jost";
+	font-size: larger;
+	display: flexbox;
 }
-/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
-YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
-#container {
-    background-color: rgba(26, 26, 52, 0.4);
-    border: 5px double tomato;
-    margin: 0 auto;
-    height: auto;
-    justify-content: center;
-    padding: 300px 50px;
+
+.kl {
+	background-color: rgba(81, 78, 89, 0.6);
+}
+
+#clockContainer {
+	position: relative;
+	margin: auto;
+	height: 40vw;
+	/*to make the height and width responsive*/
+	width: 40vw;
+	background: url("index.png") no-repeat;
+	/*setting our background image*/
+	background-size: 100%;
+}
+
+#hour,
+#minute,
+#second {
+	position: absolute;
+	background: rgb(5, 30, 50);
+	border-radius: 7px;
+	transform-origin: bottom;
+}
+
+#hour {
+	width: 1.8%;
+	height: 25%;
+	top: 25%;
+	left: 48.85%;
+	opacity: 0.8;
+}
+
+#minute {
+	width: 1.6%;
+	height: 30%;
+	top: 19%;
+	left: 48.9%;
+	opacity: 0.8;
+}
+
+#second {
+	width: 1%;
+	height: 40%;
+	top: 9%;
+	left: 49.25%;
+	background-color: rgb(250, 254, 4);
+	opacity: 0.8;
+}
+
+#q {
+    color: rgb(171, 114, 0)/*#A70D2A*/;
+    font-family: 'Jost';
     text-align: center;
-    width: auto;
-}
-/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
-YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
-#btn {
-    margin: 0  auto;
-    height: auto;
-    border-radius: 3px;
-    width: auto;
-    font-size: 23px;
-    color: black;
-    justify-content: center;
-    background-color: tomato;
 
+    cursor: pointer;
+    font-size: 60px;
 }
-/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
-YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
-#output {
-    margin: 0 auto;
-    font-size: 21px;
-    background-color: rgba(26, 26, 52, 0.4);
-    color: whitesmoke;
-    font-family: Kalam;
-    justify-content: center;
+
+#s {
+    color: rgb(2, 79, 90)/*#A70D2A*/;
+    font-family: 'Jost';
+
+    cursor: pointer;
+    font-size: 60px;
 }
-/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
-YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
 
-/* FOR ANIMATION: REFER ANIMISTA- THE ON-DEMAND CSS ANIM. LIB. */
-.slide-out-elliptic-top-fwd{animation:slide-out-elliptic-top-fwd 1s cubic-bezier(.55,.085,.68,.53) alternate-reverse both}
-@keyframes slide-out-elliptic-top-fwd{0%{transform:translateY(0) rotateX(0) scale(1);transform-origin:50% -500px;opacity:1}100%{transform:translateY(-600px) rotateX(20deg) scale(6);transform-origin:50% 200%;opacity:0}}
+#t {
+    color: rgb(4, 122, 4)/*#A70D2A*/;
+    font-family: 'Jost';
 
-.slide-top{animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both}
-@keyframes slide-top{0%{transform:translateY(0)}100%{transform:translateY(-100px)}}
+
+    cursor: pointer;
+    font-size: 60px;
+}
+
+#v {
+    color: rgba(175, 0, 0, 0.752)/*#A70D2A*/;
+    font-family: 'Jost';
+    text-align: left; 
+    padding: 0;
+    left: 0;
+    cursor: pointer;
+    font-size: 60px;
+}
+
