--- a/index.css
+++ b/index.css
@@ -1,57 +1,66 @@
 body {
-    background-color: rgba(67, 9, 240, 0.6);
-	font-family: Arial, "Jost";
-	font-size: larger;
-	display: flexbox;
+    font-family:"Gill Sans MT";
+    /*background-color: rgb(37, 37, 37);*/
+    /* background: url("DEL.jpg"); */
+    /* background-repeat: no-repeat;
+    background-size: cover; */
+    font-weight: bolder;
 }
-
-.kl {
-	background-color: rgba(81, 78, 89, 0.6);
+/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
+YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
+#container {
+    background-color: rgba(26, 26, 52, 0.4);
+    border: 5px double tomato;
+    margin: 0 auto;
+    height: auto;
+    justify-content: center;
+    padding: 300px 50px;
+    text-align: center;
+    width: auto;
 }
+/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
+YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
+#btn {
+    margin: 0  auto;
+    height: auto;
+    border-radius: 3px;
+    width: auto;
+    font-size: 16px;
+    color: black;
+    justify-content: center;
+    background-color: salmon;
 
-#clockContainer {
-	position: relative;
-	margin: auto;
-	height: 40vw;
-	/*to make the height and width responsive*/
-	width: 40vw;
-	background: url("index.png") no-repeat;
-	/*setting our background image*/
-	background-size: 100%;
 }
-
-#hour,
-#minute,
-#second {
-	position: absolute;
-	background: rgb(5, 30, 50);
-	border-radius: 7px;
-	transform-origin: bottom;
+/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
+YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
+#output {
+    margin: 0 auto;
+    font-size: 16px;
+    background-color: rgba(26, 26, 52, 0.4);
+    color: whitesmoke;
+    font-family: segoe print;
+    justify-content: center;
 }
+/*CODE PROVIDED BY LORD AYUSH JHA @theGeekyChad ©
+YOU CAN FREELY EDIT AND USE THE CODE HEREBY*/
 
-#hour {
-	width: 1.8%;
-	height: 25%;
-	top: 25%;
-	left: 48.85%;
-	opacity: 0.8;
-}
+/* FOR ANIMATION: REFER ANIMISTA- THE ON-DEMAND CSS ANIM. LIB. */
+.slide-out-elliptic-top-fwd{animation:slide-out-elliptic-top-fwd 1s cubic-bezier(.55,.085,.68,.53) alternate-reverse both}
+@keyframes slide-out-elliptic-top-fwd{0%{transform:translateY(0) rotateX(0) scale(1);transform-origin:50% -500px;opacity:1}100%{transform:translateY(-600px) rotateX(20deg) scale(6);transform-origin:50% 200%;opacity:0}}
 
-#minute {
-	width: 1.6%;
-	height: 30%;
-	top: 19%;
-	left: 48.9%;
-	opacity: 0.8;
-}
+.slide-top{animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both}
+@keyframes slide-top{0%{transform:translateY(0)}100%{transform:translateY(-100px)}}
 
-#second {
-	width: 1%;
-	height: 40%;
-	top: 9%;
-	left: 49.25%;
-	background-color: rgb(250, 254, 4);
-	opacity: 0.8;
+
+.d {
+    z-index: -1;
+    background-size: cover;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    
 }
 
 #q {
@@ -89,4 +98,3 @@ body {
     cursor: pointer;
     font-size: 60px;
 }
-
